My Inspiration  main-2-div added

--- a/index.html
+++ b/index.html
@@ -83,6 +83,20 @@
             </div>
             
         </div>
+
+        <div class="main-2-div">
+            <div class="main-2-div1">
+                <h1 class="main-1-div-h1">My Inspiration</h1>
+                <p class="subtitle">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+            </div>
+            <div class="main-2-div2">
+                <div class="main-2-div2-vdo">    
+                    <iframe src="https://www.youtube.com/embed/JUwePydwbUI?si=mct6Rb3_aI_dU7Jh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
+
+            </div>
+
+        </div>
     </main>
     
 </body>
