My Current Target  main-3-div added

--- a/index.html
+++ b/index.html
@@ -93,6 +93,48 @@
                 <div class="main-2-div2-vdo">    
                     <iframe src="https://www.youtube.com/embed/JUwePydwbUI?si=mct6Rb3_aI_dU7Jh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
+            </div>
+        </div>
+
+        <div class="main-3-div">
+            <div class="main-3-div-my-current-target"> 
+                <div class="main-2-div1">
+                    <h1 class="main-1-div-h1">My Current Target</h1>
+                    <p class="subtitle">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+                </div>
+
+                <div class="main-3-div-1-card">                    
+                    <div class="main-3-div-1-card-1 main-3-div-1-card-1-bg-color"> 
+                        <div class="main-3-div-1-card-1-innertxt">
+                            <img src="assets/html.png" alt="">
+                            <h1 class="main-3-div-1-card-h1">HTML</h1>
+                            <p class="main-1-div-card1-left-subtitle">Lorem Ipsum is simply dummy text of the printing.</p>
+                            <a class="main-3-div-1-card-link" href="#">Learn More</a>
+                        </div> 
+                    </div>
+
+                    <div class="main-3-div-1-card-1 main-3-div-1-card-2-bg-color"> 
+                        <div class="main-3-div-1-card-1-innertxt">
+                            <img src="assets/css.png" alt="">
+                            <h1 class="main-3-div-1-card-h1">CSS</h1>
+                            <p class="main-1-div-card1-left-subtitle">Lorem Ipsum is simply dummy text of the printing.</p>
+                            <a class="main-3-div-1-card-link" href="#">Learn More</a>
+                        </div> 
+                    </div>
+
+                    <div class="main-3-div-1-card-1 main-3-div-1-card-3-bg-color"> 
+                        <div class="main-3-div-1-card-1-innertxt">
+                            <img src="assets/js.png" alt="">
+                            <h1 class="main-3-div-1-card-h1">JavaScript</h1>
+                            <p class="main-1-div-card1-left-subtitle">Lorem Ipsum is simply dummy text of the printing.</p>
+                            <a class="main-3-div-1-card-link" href="#">Learn More</a>
+                        </div> 
+                    </div>
+
+                </div>
+
+                
+
 
             </div>
 
