My Next Target  main-3-div added

--- a/index.html
+++ b/index.html
@@ -131,13 +131,58 @@
                         </div> 
                     </div>
 
-                </div>
-
-                
-
+                </div>             
 
             </div>
 
+            <div class="main-4-div-my-next-target">
+                <div class="main-2-div1">
+                    <h1 class="main-1-div-h1">My Next Target</h1>
+                    <p class="subtitle">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+                </div>
+                <div class="main-4-div-1-card">
+                    <div class="main-4-div-card-bg">
+                        <div class="main-4-div-card-outer">
+                            <div class="main-4-div-card-img">
+                                <img src="assets/react.png" alt="">                                
+                            </div>
+                            <div class="main-4-div-card-txt">
+                                <h1 class="main-3-div-1-card-h1">ReactJS</h1>
+                                <p class="main-1-div-card1-left-subtitle">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+                                <a class="main-3-div-1-card-link" href="">Learn More</a>
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <div class="main-4-div-card-bg">
+                        <div class="main-4-div-card-outer">
+                            <div class="main-4-div-card-img">
+                                <img src="assets/nodejs.png" alt="">                                
+                            </div>
+                            <div class="main-4-div-card-txt">
+                                <h1 class="main-3-div-1-card-h1">NodeJs</h1>
+                                <p class="main-1-div-card1-left-subtitle">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+                                <a class="main-3-div-1-card-link" href="">Learn More</a>
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <div class="main-4-div-card-bg">
+                        <div class="main-4-div-card-outer">
+                            <div class="main-4-div-card-img">
+                                <img src="assets/mongodb.png" alt="">                                
+                            </div>
+                            <div class="main-4-div-card-txt">
+                                <h1 class="main-3-div-1-card-h1">MongoDB</h1>
+                                <p class="main-1-div-card1-left-subtitle">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+                                <a class="main-3-div-1-card-link" href="">Learn More</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>   
+             </div>
         </div>
     </main>
     
