--- a/index.html
+++ b/index.html
@@ -199,6 +199,15 @@
             </div>
         </div>
     </main>
+
+    <footer id="footer">
+        <p class="footer-left">An Open Commitment by Rahul Dey</p>
+        <div class="footer-right">
+            <a href="https://www.facebook.com/" target="_blank"> <img src="assets/facebook.png" alt="fb"></a>
+            <a href="https://github.com/" target="_blank"> <img src="assets/github.png" alt="github"></a>
+            <a href="https://www.linkedin.com/"> <img src="assets/linkedin-icon.png" alt="linkedin"></a>
+        </div>
+    </footer>
     
 </body>
 </html>
